--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,19 @@
 /.idea/*
 __pycache__
 .DS_Store
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+/colander_data_converter.egg-info/
+/junit/
