--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,27 @@
 [tox]
 envlist = clean,py313,report
+isolated_build = True
 
 [testenv]
-commands = pytest --isolate --cov=colander_data_converter --cov-append --cov-report=term-missing
+commands =
+    coverage run -m pytest --md-report --md-report-verbose=0 --md-report-output test-report.md
+
 deps =
+    coverage
     pytest==8.4.0
     pytest-isolate==0.0.12
     pytest-cov==6.2.0
+    pytest-md-report==0.7.0
 depends =
     {py313}: clean
-    report: py313
+    {report}: py313
 
 [testenv:report]
 deps = coverage
 skip_install = true
+allowlist_externals = bash
 commands =
-    coverage report
-    coverage html
-    coverage xml
+    bash -c "coverage report --format=markdown | tee test-coverage.md"
 
 [testenv:clean]
 deps = coverage
