Add supported types definition

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ isolated_build = True
 
 [testenv]
 commands =
-    coverage run -m pytest --md-report --md-report-verbose=0 --md-report-output test-report.md
+    coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
 
 deps =
     coverage
