--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -5,3 +5,4 @@ sphinx-rtd-theme==3.0.2
 sphinx-rtd-dark-mode==1.3.0
 sphinx-pydantic==0.1.1
 autodoc_pydantic==2.2.0
+sphinxcontrib.datatemplates==0.11.0
