--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,19 @@
 [tox]
-envlist = clean,py313,report
+envlist = clean,py313,report,docs
 isolated_build = True
 
 [testenv]
 commands =
     coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
-
 deps =
     coverage
     pytest==8.4.0
-    pytest-isolate==0.0.12
     pytest-cov==6.2.0
     pytest-md-report==0.7.0
 depends =
     {py313}: clean
     {report}: py313
+    {docs}: py313
 
 [testenv:report]
 deps = coverage
@@ -22,6 +21,19 @@ skip_install = true
 allowlist_externals = bash
 commands =
     bash -c "coverage report --format=markdown | tee test-coverage.md"
+
+[testenv:docs]
+deps =
+    sphinx==8.1.3
+    sphinx-hoverxref==1.4.2
+    sphinx-notfound-page==1.0.4
+    sphinx-rtd-theme==3.0.2
+    sphinx-rtd-dark-mode==1.3.0
+    sphinx-pydantic==0.1.1
+    autodoc_pydantic==2.2.0
+    sphinxcontrib.datatemplates==0.11.0
+commands =
+    sphinx-build -M html docs docs/_build/
 
 [testenv:clean]
 deps = coverage
