--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,15 @@
 [tox]
-envlist = clean,py313,report,docs
+requires =
+    tox>=4.2
+    uv>=0.4.10
+    tox-uv>=1.11.3
+env_list =
+    clean
+    fix
+    py312
+    py313
+    report
+    docs
 isolated_build = True
 
 [testenv]
@@ -10,10 +20,14 @@ deps =
     pytest==8.4.0
     pytest-cov==6.2.0
     pytest-md-report==0.7.0
-depends =
-    {py313}: clean
-    {report}: py313
-    {docs}: py313
+
+[testenv:fix]
+description = format the code base to adhere to our styles, and complain about what we cannot do automatically
+skip_install = true
+deps =
+    pre-commit-uv>=4.1.1
+commands =
+    pre-commit run --all-files --show-diff-on-failure
 
 [testenv:report]
 deps = coverage
