--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 [tool.codespell]
 builtin = "clear,usage,en-GB_to_en-US"
-count = true
+ignore-words-list = "ot,master"
 
 [tool.coverage.run]
 omit = [
