--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ on:
       - main
       - "[0-9]+.[0-9]+.x"
     types:
-    - opened  # default
-    - synchronize  # default
-    - reopened  # default
-    - ready_for_review  # used in PRs created from the release workflow
+      - opened  # default
+      - synchronize  # default
+      - reopened  # default
+      - ready_for_review  # used in PRs created from the release workflow
 
 env:
   PYTEST_ADDOPTS: "--color=yes"
@@ -36,26 +36,26 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+          - "3.12"
+          - "3.13"
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.13
-        uses: actions/setup-python@v5
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: '3.13'
-          cache: 'pip'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r dev-requirements.txt -r docs/requirements.txt
+          version: "0.7.16"
+          python-version: ${{ matrix.python-version }}
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
       - name: Lint code with Ruff
         run: ruff check --output-format=github
-      - name: Check code formatting with Ruff
-        run: ruff format --diff
-        continue-on-error: true
       - name: Run tests and coverage
         shell: bash
         run: |
