--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,9 +41,6 @@ jobs:
         python-version:
           - "3.12"
           - "3.13"
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - uses: actions/checkout@v4
@@ -72,6 +69,29 @@ jobs:
             cat "test-coverage.md" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
           fi
+  doc:
+    needs:
+      - build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          version: "0.7.16"
+          python-version: ${{ matrix.python-version }}
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Lint code with Ruff
+        run: ruff check --output-format=github
+      - name: Run tests and coverage
+        shell: bash
+        run: |
+          tox run -e docs
       - name: Upload documentation
         uses: actions/upload-pages-artifact@v3
         with:
