--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -83,12 +83,10 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           version: "0.7.16"
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.13"
       - name: Install the project
         run: uv sync --locked --all-extras --dev
-      - name: Lint code with Ruff
-        run: ruff check --output-format=github
-      - name: Run tests and coverage
+      - name: Generate documentation
         shell: bash
         run: |
           tox run -e docs
