--- a/tox.ini
+++ b/tox.ini
@@ -4,16 +4,18 @@ requires =
     uv>=0.4.10
     tox-uv>=1.11.3
 env_list =
-    clean
     fix
-    py312
-    py313
-    report
+    3.12
+    3.13
+    3.14
 isolated_build = True
 
 [testenv]
+description = run the unit tests with pytest under {base_python}
+allowlist_externals = bash
 commands =
     coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
+    bash -c "coverage report --format=markdown | tee test-coverage.md"
 deps =
     coverage
     pytest==8.4.0
@@ -28,14 +30,15 @@ deps =
 commands =
     pre-commit run --all-files --show-diff-on-failure
 
-[testenv:report]
-deps = coverage
-skip_install = true
-allowlist_externals = bash
+[testenv:type]
+description = run type check on code base
+deps =
+    mypy>=1.16.1
 commands =
-    bash -c "coverage report --format=markdown | tee test-coverage.md"
+    mypy src
 
 [testenv:docs]
+description = generate documentation
 deps =
     sphinx==8.1.3
     sphinx-hoverxref==1.4.2
@@ -47,8 +50,3 @@ deps =
     sphinxcontrib.datatemplates==0.11.0
 commands =
     sphinx-build -M html docs docs/_build/
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
