--- a/pyproject.toml
+++ b/pyproject.toml
@@ -80,7 +80,7 @@ python_version = "3.13"
 warn_return_any = false
 ignore_missing_imports = true
 disable_error_code = [
-  "call-overload"
+  "call-overload",
 ]
 
 [tool.uv]
