--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,8 @@ commands =
 description = generate documentation
 deps =
     sphinx==8.1.3
-    sphinx-autoapi
+    sphinx-jsonschema
+    sphinx_toolbox
     sphinx-copybutton
     autoclasstoc==1.7.0
     sphinx-hoverxref==1.4.2
@@ -52,11 +53,28 @@ deps =
 commands =
     sphinx-build -M html docs docs/_build/
 
+[testenv:apidoc]
+description = generate API documentation
+deps =
+    sphinx==8.1.3
+    sphinx-jsonschema
+    sphinx_toolbox
+    sphinx-hoverxref==1.4.2
+    sphinx-notfound-page==1.0.4
+    sphinx-rtd-theme==3.0.2
+    sphinx-rtd-dark-mode==1.3.0
+    sphinx-pydantic==0.1.1
+    autodoc_pydantic==2.2.0
+    sphinxcontrib.datatemplates==0.11.0
+commands =
+    sphinx-apidoc -f --remove-old -e -o ./docs/source/ ./colander_data_converter/
+
 [testenv:servedocs]
 description = serve documentation
 deps =
     sphinx==8.1.3
-    sphinx-autoapi
+    sphinx-jsonschema
+    sphinx_toolbox
     sphinx-autobuild
     sphinx-copybutton
     autoclasstoc==1.7.0
