--- a/tox.ini
+++ b/tox.ini
@@ -11,78 +11,46 @@ isolated_build = True
 
 [testenv]
 description = run the unit tests with pytest under {base_python}
+usedevelop = true
+dependency_groups =
+    test
 allowlist_externals = bash
 commands =
     coverage run -m pytest --doctest-modules --md-report --md-report-verbose=0 --md-report-output test-report.md
     bash -c "coverage report --format=markdown | tee test-coverage.md"
-deps =
-    coverage
-    pytest==8.4.0
-    pytest-cov==6.2.0
-    pytest-md-report==0.7.0
 
 [testenv:fix]
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 skip_install = true
-deps =
-    pre-commit-uv>=4.1.1
+dependency_groups =
+    test
 commands =
     pre-commit run --all-files --show-diff-on-failure
 
 [testenv:type]
 description = run type check on code base
-deps =
-    mypy>=1.16.1
+dependency_groups =
+    test
 commands =
     mypy src
 
 [testenv:docs]
 description = generate documentation
-deps =
-    sphinx==8.1.3
-    sphinx-jsonschema
-    sphinx_toolbox
-    sphinx-copybutton
-    autoclasstoc==1.7.0
-    sphinx-hoverxref==1.4.2
-    sphinx-notfound-page==1.0.4
-    sphinx-rtd-theme
-    sphinx-pydantic==0.1.1
-    autodoc_pydantic==2.2.0
-    sphinxcontrib.datatemplates==0.11.0
+dependency_groups =
+    docs
 commands =
     sphinx-build -M html docs docs/_build/
 
 [testenv:apidoc]
 description = generate API documentation
-deps =
-    sphinx==8.1.3
-    sphinx-jsonschema
-    sphinx_toolbox
-    sphinx-hoverxref==1.4.2
-    sphinx-notfound-page==1.0.4
-    sphinx-rtd-theme==3.0.2
-    sphinx-rtd-dark-mode==1.3.0
-    sphinx-pydantic==0.1.1
-    autodoc_pydantic==2.2.0
-    sphinxcontrib.datatemplates==0.11.0
+dependency_groups =
+    docs
 commands =
     sphinx-apidoc -f --remove-old -e -o ./docs/source/ ./colander_data_converter/
 
 [testenv:servedocs]
 description = serve documentation
-deps =
-    sphinx==8.1.3
-    sphinx-jsonschema
-    sphinx_toolbox
-    sphinx-autobuild
-    sphinx-copybutton
-    autoclasstoc==1.7.0
-    sphinx-hoverxref==1.4.2
-    sphinx-notfound-page==1.0.4
-    sphinx-rtd-theme
-    sphinx-pydantic==0.1.1
-    autodoc_pydantic==2.2.0
-    sphinxcontrib.datatemplates==0.11.0
+dependency_groups =
+    docs
 commands =
     sphinx-autobuild --watch colander_data_converter  docs/ docs/_build/html
