--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ skip_install = true
 dependency_groups =
     test
 commands =
-    pre-commit run --all-files --show-diff-on-failure
+    pre-commit run --all-files
 
 [testenv:type]
 description = run type check on code base
