--- a/tox.ini
+++ b/tox.ini
@@ -23,8 +23,10 @@ commands =
 description = format the code base to adhere to our styles, and complain about what we cannot do automatically
 skip_install = true
 dependency_groups =
+    dev
     test
 commands =
+    ruff format
     pre-commit run --all-files
 
 [testenv:type]
