--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,10 @@ repos:
     rev: v2.4.1
     hooks:
       - id: codespell
+        exclude: >
+          (?x)^(
+              .*\.json|.*\.svg|\.tox
+          )$
         args: ["--write-changes"]
   - repo: https://github.com/tox-dev/pyproject-fmt
     rev: "v2.6.0"
