Improve code generation

--- a/tox.ini
+++ b/tox.ini
@@ -43,6 +43,16 @@ dependency_groups =
 commands =
     sphinx-build -M html docs docs/_build/
 
+[testenv:gen]
+description = generate code
+dependency_groups =
+    dev
+    test
+commands =
+    python generate_types.py
+    ruff format
+    pre-commit run --all-files
+
 [testenv:apidoc]
 description = generate API documentation
 dependency_groups =
