--- a/tox.ini
+++ b/tox.ini
@@ -34,7 +34,7 @@ description = run type check on code base
 dependency_groups =
     test
 commands =
-    mypy src
+    mypy colander_data_converter
 
 [testenv:docs]
 description = generate documentation
