--- a/tox.ini
+++ b/tox.ini
@@ -41,9 +41,10 @@ description = generate documentation
 dependency_groups =
     docs
 commands =
-    sphinx-build -M html docs docs/_build/
+    sphinx-build -M html ./docs docs/_build/
+    sphinx-build -M linkcheck ./docs docs/_build/
 
-[testenv:gen]
+[testenv:gencode]
 description = generate code
 dependency_groups =
     dev
